# WebSocket_RGB_Leds

./: CMakeLists.txt  README.md  package-lock.json  package.json  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  webserver.js
html/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig_Inthernet  blink_example_main.c  ftp.c  ftp.h  idf_component.yml  my_connect.c  my_connect.h  rest_server.c
main/ddns_acme/: README.md  acmec_c.c  acmec_c.cpp  acmec_c.h  dyndns_c.c  dyndns_c.cpp  dyndns_c.h  secrets_demo.h
main/ota_firmware/: README.md  esp32-wifi-provision-care.c  esp32-wifi-provision-care.h  ota.html
storage_dirs/html/: index.html  script.js
